Fixing bug 305528. Make XPCWrappedNative::GetWrappedNativeOfJSObject() attempt to find a wrapper using obj's outer object if it can't find one using obj. r=shaver@mozilla.org, sr=brendan@mozilla.org